--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,24 +1,59 @@
 name: Argo CD GitOps CI/CD
+
 on:
   push:
     branches:
-    - main
-  
+      - main
+
 jobs:
   build:
     name: Build and Push the image
     runs-on: ubuntu-latest
-    
+
     steps:
     - name: Check out code
       uses: actions/checkout@v2
 
-    - name: Login to Docker Hub
-      uses: docker/login-action@v3
+    - name: Bump version
+      id: bump_version
+      run: |
+        chmod +x build-push-to-gh/bump_version.sh && ./build-push-to-gh/bump_version.sh
+        new_version=$(cat VERSION-GH)
+        echo "::set-output name=new_version::$new_version"
+
+    - name: Commit new version
+      run: |
+        git config --global user.name 'sosotechnologies'
+        git config --global user.email 'sosotech2000@gmail.com'
+        git add VERSION-GH
+        git commit -m "Bump version to ${{ steps.bump_version.outputs.new_version }}" || echo "No changes to commit"
+        git stash
+        git pull --rebase origin main
+        git stash pop || echo "No stashed changes"
+        git push origin main
+
+    - name: Build the Docker image
+      run: |
+        cd build-push-to-gh
+        docker build -t ghcr.io/${{ github.repository }}/node-app:${{ steps.bump_version.outputs.new_version }} .
+
+    - name: Run Trivy vulnerability scanner
+      uses: aquasecurity/trivy-action@master
       with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
-    
+        image-ref: 'ghcr.io/${{ github.repository }}/node-app:${{ steps.bump_version.outputs.new_version }}'
+        format: 'table'
+        exit-code: '0'
+        ignore-unfixed: true
+        vuln-type: 'os,library'
+        severity: 'MEDIUM,HIGH,CRITICAL'
+        output: 'build-push-to-gh/trivy-report.txt'
+
+    - name: package Trivy report
+      uses: actions/upload-artifact@v3
+      with:
+        name: trivy-report
+        path: build-push-to-gh/trivy-report.txt
+   
     - name: Build and push
       uses: docker/build-push-action@v5
       with:
