--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,50 +1,24 @@
 name: Argo CD GitOps CI/CD
-
 on:
   push:
     branches:
-      - main
-
+    - main
+  
 jobs:
   build:
     name: Build and Push the image
     runs-on: ubuntu-latest
-
+    
     steps:
     - name: Check out code
       uses: actions/checkout@v2
 
-    - name: Commit new version
-      run: |
-        git config --global user.name 'sosotechnologies'
-        git config --global user.email 'sosotech2000@gmail.com'
-        git stash
-        git pull --rebase origin main
-        git stash pop || echo "No stashed changes"
-        git push origin main
-
-    - name: Build the Docker image
-      run: |
-        cd build-push-to-gh
-        docker build -t ghcr.io/${{ github.repository }}/node-app:${{ steps.bump_version.outputs.new_version }} .
-
-    - name: Run Trivy vulnerability scanner
-      uses: aquasecurity/trivy-action@master
+    - name: Login to Docker Hub
+      uses: docker/login-action@v3
       with:
-        image-ref: 'ghcr.io/${{ github.repository }}/node-app:${{ steps.bump_version.outputs.new_version }}'
-        format: 'table'
-        exit-code: '0'
-        ignore-unfixed: true
-        vuln-type: 'os,library'
-        severity: 'MEDIUM,HIGH,CRITICAL'
-        output: 'build-push-to-gh/trivy-report.txt'
-
-    - name: package Trivy report
-      uses: actions/upload-artifact@v3
-      with:
-        name: trivy-report
-        path: build-push-to-gh/trivy-report.txt
-   
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
+    
     - name: Build and push
       uses: docker/build-push-action@v5
       with:
